--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "loopai",
+  "name": "job-processor",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "A job processing server with Express and MongoDB",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "espress": "^0.0.0",
-    "mongoose": "^8.15.1",
-    "node": "^22.16.0",
-    "ratelimiter": "^3.4.1",
-    "uuid": "^11.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "jest": "^29.6.4",
+    "nodemon": "^3.1.10"
   }
 }
